[package]
name = "photo-backlog-exporter"
version = "0.1.0"
edition = "2021"
default-run = "oneshot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
gumdrop = "0.8.1"
prometheus-client = "0.22.0"
walkdir = "2.4.0"
log = "0.4.20"

[dependencies.env_logger]
version = "0.11.2"
default-features = false
features = ["auto-color", "humantime"]

[dev-dependencies]
tempfile = "3.10.0"
rstest = "0.18.2"
speculoos = "0.11.0"
