[package]
name = "photo-backlog-exporter"
version = "0.1.0"
edition = "2021"
default-run = "oneshot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
gumdrop = "0.8.1"
prometheus-client = "0.22.3"
walkdir = "2.5.0"
log = "0.4.22"

[dependencies.env_logger]
version = "0.11.5"
default-features = false
features = ["auto-color", "humantime"]

[dev-dependencies]
tempfile = "3.10.1"
rstest = "0.21.0"
speculoos = "0.11.0"
axum-test = "15.3.0"
testing_logger = "0.1.1"
assert_cmd = "2.0.15"
predicates = "3.1.2"
